fixing icon meta

--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700&family=Lexend:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="theme-color" content="#5B1111" />
+    <meta name="description" content="Unity Sports & Cultural Club, also knows as Unity Sports & Cultural Association, Is the largest Caribbean-American based non-profits in New England founded in August 1968" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -70,7 +70,7 @@
       </div>
   </form>
 
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>You need to enable JavaScript to run this website.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
