--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Unity Sports & Cultural Club</title>
+
+    <title>Unity Sports and Cultural Club</title>
+
   </head>
   <body>
 
